# trajectory-sandbox

./: .env.example  .gitignore  Dockerfile.mock-tools  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
clawbench/: __init__.py  cli.py  runner.py  scoring.py
config/: openclaw.json  openclaw.json.template  openclaw.sandbox.example.json
configs/: bench_log_summary.yaml  bench_phase1.yaml  qwen35_starter.yaml
docker/: Dockerfile.claudecode  Dockerfile.hermes  Dockerfile.openclaw  Dockerfile.sandbox  claudecode-entrypoint.sh  entrypoint.sh  hermes-preentry.sh  openclaw-entrypoint.sh  supervisord.conf
docs/: workplace-assistant.md
openclaw-plugin/: index.ts  openclaw.plugin.json  package.json
proposal/: 0227-harder-scenarios.md  simplify-scenario-setup.md
scenarios/: client_escalation.yaml  inbox_to_action.yaml  inbox_triage.json  inbox_triage.yaml  morning_brief.yaml  team_standup.yaml
scripts/: init_workspace.py  run.sh  run_batch.py  run_episode.py  run_mock_server.py  setup_scenario.py  test_full.sh  test_handlers.py  test_mock_tools.py  test_scoring.py
tests/: smoke_harness_adapter.py  smoke_test.py  test_agent_judge_live.py  test_bench_runner.py  test_cli_scenario_files.py  test_conformance.py  test_criterion_ratios.py  test_e2e_docker.py  test_environment_md_drift.py  test_episode_scorer.py  test_extract_quality.py  test_fixture_factory.py  test_hermes_live.py  test_integration.py  test_judge.py  test_judge_live.py  test_judge_save.py  test_morning_brief.py  test_scoring.py  test_skill_vs_baseline.py  test_types.py
trajectory_sandbox/: __init__.py  cli.py  episode_scorer.py  evidence.py  fixture_factory.py  judge.py  scoring.py  session.py
trajrl_bench/: __init__.py  bench.py  cli.py  containers.py  episode_scorer.py  evidence.py  fixture_factory.py  judge.py  session.py  ssh_keys.py  types.py
(+43 files in other folders)
