[project]
name = "trajectory-sandbox"
version = "0.1.0"
description = "Sandbox for evaluating AGENTS.md policies with OpenClaw"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "rich>=13.0",
    "typer>=0.9",
    "fastapi>=0.110",
    "uvicorn>=0.29",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "ruff"]

[project.scripts]
sandbox = "trajectory_sandbox.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
